--- a/app/src/main/res/layout/layout_header_navigation.xml
+++ b/app/src/main/res/layout/layout_header_navigation.xml
@@ -8,20 +8,20 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAnhDaiDien"
-        android:layout_width="@dimen/size75dp"
-        android:layout_height="@dimen/size75dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/avatar_macdinh"
-        android:layout_marginLeft="@dimen/size25dp"
+        android:src="@drawable/gamequanlykhachsan"
+        android:layout_marginLeft="25dp"
         />
 
 
     <com.facebook.login.widget.ProfilePictureView
-        android:layout_height="@dimen/size75dp"
-        android:layout_width="@dimen/size75dp"
-        android:id="@+id/avatar"
+        android:layout_height="75dp"
+        android:layout_width="75dp"
+        android:id="@+id/avatar2"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/size25dp"
+        android:layout_marginLeft="25dp"
         />
 
     <TextView
@@ -33,7 +33,7 @@
         android:textSize="17sp"
         android:textColor="#000"
         android:textStyle="bold"
-        android:text="TRAN LAM"
+        android:text="Tên người dùng"
         android:layout_marginTop="10dp"
         android:fontFamily="serif"
         />
